Tailwind delete Copy

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     </section>
     <section class="footer bg-orange-400 h-[300px] w-full mt-20 flex items-end justify-center">
-        <p class="text-white text-[10px]">&copy;2024 Nuttawan</p>
+        <p class="text-white text-[10px]"></p>
 
     </section>
 </body>
