--- a/index.html
+++ b/index.html
@@ -1,38 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwind</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- <link rel="stylesheet" href="./style.css"> -->
-
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <div class="container w-[75vw] m-auto flex justify-center md:justify-between items-center">
-            <div class="logo flex items-center gap-2">
-                <div class=" bg-orange-500 w-[50px] h-[50px] rounded-[50%]"></div>
-                <p >Moveto</p>
-            </div>
-            <div class="links hidden md:block">
-                <ul class="flex gap-2">
-                    <li>Home</li>
-                    <li class="flex gap-1 items-center"><p>Services</p><i class="fa-solid fa-caret-down"></i></li>
-                    <li class="flex gap-1 items-center"><p>Moving Planner</p><i class="fa-solid fa-caret-down"></i></li>
-                    <li>Contact</li>
-                    <li class="flex gap-1 items-center"><p>Pages</p><i class="fa-solid fa-caret-down"></i></li>
-
-                </ul>
-            </div>
-            <div class="sns hidden md:flex gap-2 items-center">
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-whatsapp"></i>
-                <button type="button" class="bg-orange-300 px-2 py-1 rounded-3xl">Get a Queue</button>
-            </div>
+      <div
+        class="container w-[75vw] m-auto flex justify-center md:justify-between items-center"
+      >
+        <div class="logo flex items-center gap-2">
+          <div class="bg-orange-500 w-[50px] h-[50px] rounded-[50%]"></div>
+          <p>Moveto</p>
         </div>
+        <div class="links hidden md:block">
+          <ul class="flex gap-2">
+            <li>Home</li>
+            <li class="flex gap-1 items-center">
+              <p>Services</p>
+              <i class="fa-solid fa-caret-down"></i>
+            </li>
+            <li class="flex gap-1 items-center">
+              <p>Moving Planner</p>
+              <i class="fa-solid fa-caret-down"></i>
+            </li>
+            <li>Contact</li>
+            <li class="flex gap-1 items-center">
+              <p>Pages</p>
+              <i class="fa-solid fa-caret-down"></i>
+            </li>
+          </ul>
+        </div>
+        <div class="sns hidden md:flex gap-2 items-center">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-whatsapp"></i>
+          <button type="button" class="bg-orange-300 px-2 py-1 rounded-3xl">
+            Get a Queue
+          </button>
+        </div>
+      </div>
     </nav>
     <section class="hero bg-[url('https://picsum.photos/200/300?grayscale')] bg-no-repeat bg-cover w-full h-[500px] flex items-center">
         <div class="copy-write w-96 font-bold ml-[12.5vw] text-white ">
@@ -134,5 +151,5 @@
         <p class="text-white text-[10px]"></p>
 
     </section>
-</body>
+  </body>
 </html>
