--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
     <section class="content">
         <div class="container shadow-xl w-[75vw] m-auto transform  -translate-y-10 bg-white rounded p-10">
-            <div class="submission flex justify-center items-center flex items-stretch ">
+            <div class="submission flex justify-center items-stretch ">
                 <h2 class="font-bold text-2xl">Get your free Moving <br/> estimate here</h2>
                 <form class="flex gap-2">
                     <div class="inp flex flex-col">
@@ -94,7 +94,7 @@
                         <div class="flex">
                             <div><i class="fa-solid fa-globe"></i></div>
                             <div>
-                                <h3 class="text-sm">Broad Reach</h4>
+                                <h3 class="text-sm">Broad Reach</h3>
                                 <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
 
     </section>
     <section class="footer bg-orange-400 h-[300px] w-full mt-20 flex items-end justify-center">
-        <p class="text-white text-[10px]"></p>
+        <p class="text-white text-[10px]">&copy;2024 Nuttawan</p>
 
     </section>
   </body>
